# Frost-C2

./: README.md  pyproject.toml
Agent/: CMakeLists.txt  agent.cpp  mingw64-toolchain.cmake
Client/: client.py  frost.py
Teamserver/: dbActions.py  server.py
